--- a/src/app/components/cell/cell.component.html
+++ b/src/app/components/cell/cell.component.html
@@ -1,1 +1,1 @@
-<div class="cell" (click)="onClick()">@if (!emptyCell) {<div>{{ value() }}</div>}</div>
+<div class="cell" (click)="onClick()">@if (!emptyCell) {<div class="cell-content">{{ value() }}</div>}</div>
