--- a/src/app/components/cell/cell.component.html
+++ b/src/app/components/cell/cell.component.html
@@ -1,1 +1,4 @@
-<div class="cell" (click)="onClick()">@if (!emptyCell) {<div class="cell-content">{{ value() }}</div>}</div>
+<div class="cell" (click)="onClick()">@if (!emptyCell) {<div class="cell-content x-o" [class.x]="value() === 'x'"
+        [class.o]="value() === 'o'">{{ value()
+        }}</div>}
+</div>
