--- a/src/app/components/play-game-button/play-game-button.html
+++ b/src/app/components/play-game-button/play-game-button.html
@@ -1,1 +1,1 @@
-<button (click)="playGame()" [disabled]="gameStatus() === 'running'">Play game</button>
+<button class="play-game-button" (click)="playGame()" [disabled]="gameStatus() === 'running'">Play!</button>
