--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&display=swap');
+
+/* Icons */
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
+
 
 :root {
     --grid-size: 35rem;
+    --bg-color: #e8e8e8;
+    --accent-color: #343434;
+    --accent-color-rgb: 52, 52, 52;
+    font-family: "Lexend Exa", sans-serif;
+}
+
+[theme='dark'] {
+    --bg-color: #121212;
+    --accent-color: #b8b8b8;
+    --accent-color-rgb: 184, 184, 184;
+}
+
+.x-o {
+    font-family: 'Lexend Exa', sans-serif;
+    font-size: calc(var(--grid-size) * 0.22);
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.x {
+    color: #c0392b;
+}
+
+.o {
+    color: #2980b9;
 }
