--- a/src/app/components/game-result/game-result.component.html
+++ b/src/app/components/game-result/game-result.component.html
@@ -1,9 +1,9 @@
-<div>
+<div class="game-result">
     @if (gameStatus() === 'human-win') {
-    <h2>Human wins!</h2>
+    <div>Human wins!</div>
     } @else if (gameStatus() === 'computer-win') {
-    <h2>Computer wins!</h2>
+    <div>Computer wins!</div>
     } @else if (gameStatus() === 'draw') {
-    <h2>It's a draw!</h2>
+    <div>It's a draw!</div>
     }
 </div>
