--- a/src/app/components/pawn-selection/pawn-selection.component.html
+++ b/src/app/components/pawn-selection/pawn-selection.component.html
@@ -1,2 +1,4 @@
-<div (click)="onPawnTypeClicked('x')">@if (pawnChoices.human === 'x') {<b>x</b>} @else {x}</div>
-<div (click)="onPawnTypeClicked('o')">@if (pawnChoices.human === 'o') {<b>o</b>} @else {o}</div>
+<div class="pawn-selection">
+    <div (click)="onPawnTypeClicked('x')" class="x-o x single" [class.selected]="pawnChoices.human === 'x'">x</div>
+    <div (click)="onPawnTypeClicked('o')" class="x-o o single" [class.selected]="pawnChoices.human === 'o'">o</div>
+</div>
