--- a/src/app/components/score/score.component.css
+++ b/src/app/components/score/score.component.css
@@ -1,4 +1,4 @@
-.score {
+.scores {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -7,19 +7,48 @@
     transition: color 0.3s ease;
 }
 
-.single {
+.score-result-pair {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 15rem;
 }
 
-.single.score {
-    font-size: 4rem;
-    font-weight: 600;
+.score-slider {
+    height: 4rem;
+    overflow: hidden;
 }
 
-.single.result {
+.score-slider-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.score {
+    height: 4rem;
+    font-size: 4rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.result {
     font-size: 1.5rem;
     font-weight: 200;
+}
+
+.animate {
+    animation: translate 0.2s ease-out;
+    animation-delay: 1.8s;
+}
+
+@keyframes translate {
+    from {
+        transform: translateY(0);
+    }
+
+    to {
+        transform: translateY(-4rem);
+    }
 }
