--- a/src/app/components/grid/grid.component.css
+++ b/src/app/components/grid/grid.component.css
@@ -6,9 +6,8 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    /* Assuming 3x3 grid */
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: var(--grid-columns);
+    grid-template-rows: var(--grid-columns);
     width: 100%;
     height: 100%;
 }
@@ -24,17 +23,18 @@
     top: 0;
     bottom: 0;
     width: calc(var(--grid-size) * 0.03);
+    transform: translateX(-50%);
     transform-origin: center;
     animation: grow-vertical 0.5s ease-out forwards;
 }
 
 @keyframes grow-vertical {
     from {
-        transform: scaleY(0);
+        transform: scaleY(0), translateX(-50%);
     }
 
     to {
-        transform: scaleY(1);
+        transform: scaleY(1), translateX(-50%);
     }
 }
 
@@ -42,17 +42,18 @@
     left: 0;
     right: 0;
     height: calc(var(--grid-size) * 0.03);
+    transform: translateY(-50%);
     transform-origin: center;
     animation: grow-horizontal 0.5s ease-out forwards;
 }
 
 @keyframes grow-horizontal {
     from {
-        transform: scaleX(0);
+        transform: scaleX(0), translateY(-50%);
     }
 
     to {
-        transform: scaleX(1);
+        transform: scaleX(1), translateY(-50%);
     }
 }
 
