--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -8,27 +8,31 @@
     </div>
 
     <!-- Vertical bars -->
-    <div class="bar vertical" style="left: calc(33.33% - var(--grid-size) * 0.015)"></div>
-    <div class="bar vertical" style="left: calc(66.66% - var(--grid-size) * 0.015)"></div>
+    @for (verticalBarPosition of barPositions; track verticalBarPosition) {
+    <div class="bar vertical" [style.left.%]="verticalBarPosition"></div>
+    }
 
     <!-- Horizontal bars -->
-    <div class="bar horizontal" style="top: calc(33.33% - var(--grid-size) * 0.015)"></div>
-    <div class="bar horizontal" style="top: calc(66.66% - var(--grid-size) * 0.015)"></div>
+    @for (horizontalBarPosition of barPositions; track horizontalBarPosition) {
+    <div class="bar horizontal" [style.top.%]="horizontalBarPosition"></div>
+    }
 
 
     <!-- Victory bars -->
 
     <!-- Vertical -->
     @if (gameVictoryDetails().orientation === 'vertical') {
-    <div class="bar victory vertical"
-        [style.left]="'calc(' + ((gameVictoryDetails().index + 1) / 3) * 100 + '% - var(--grid-size) * (1/6 + 0.015))'">
-    </div>
+    <div class="bar victory vertical" [style.left]=" 'calc(' +
+      ((gameVictoryDetails().index + 0.5) * (100 / gameSize)) +
+      '% - var(--grid-size) * 0.015)'
+    "></div>
     }
 
     <!-- Horizontal -->
     @if (gameVictoryDetails().orientation === 'horizontal') {
-    <div class="bar victory horizontal"
-        [style.top]="'calc(' + ((gameVictoryDetails().index + 1) / 3) * 100 + '% - var(--grid-size) * (1/6 + 0.01))'">
+    <div class="bar victory horizontal" [style.top]="'calc(' +
+      ((gameVictoryDetails().index + 0.5) * (100 / gameSize)) +
+      '% - var(--grid-size) * 0.015)'">
     </div>
     }
 
