--- a/src/app/components/pawn-selection/pawn-selection.component.html
+++ b/src/app/components/pawn-selection/pawn-selection.component.html
@@ -1,4 +1,4 @@
 <div class="pawn-selection">
-    <div (click)="onPawnTypeClicked('x')" class="x-o x single" [class.selected]="pawnChoices.human === 'x'">x</div>
-    <div (click)="onPawnTypeClicked('o')" class="x-o o single" [class.selected]="pawnChoices.human === 'o'">o</div>
+    <div (click)="onPawnTypeClicked('x')" class="x-o x t single" [class.selected]="pawnChoices.human === 'x'">x</div>
+    <div (click)="onPawnTypeClicked('o')" class="x-o o t single" [class.selected]="pawnChoices.human === 'o'">o</div>
 </div>
