--- a/src/app/components/pawn-selection/pawn-selection.component.css
+++ b/src/app/components/pawn-selection/pawn-selection.component.css
@@ -2,19 +2,17 @@
     display: flex;
     gap: 4rem;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+}
+
+.t {
+    transition: opacity 0.2s ease;
 }
 
 .single {
-    /* padding-left: 2rem; */
-    /* padding-right: 2rem; */
     opacity: 0.2;
     cursor: pointer;
 }
 
 .selected {
-    /* border: 2px solid #272727; */
-    border-radius: 30px;
     opacity: 1;
 }
