--- a/src/app/components/score/score.component.css
+++ b/src/app/components/score/score.component.css
@@ -1,21 +1,33 @@
 .scores {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    gap: min(2vw, 2vh, 1rem);
     align-items: center;
     color: var(--accent-color);
     text-transform: uppercase;
     transition: color 0.3s ease;
 }
 
+@media (min-width: 60rem) {
+    .scores {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        color: var(--accent-color);
+        text-transform: uppercase;
+        transition: color 0.3s ease;
+    }
+}
+
 .score-result-pair {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 15rem;
+    width: min(15vw, 15rem);
 }
 
 .score-slider {
-    height: 4rem;
+    height: min(8vw, 8vh, 4rem);
     overflow: hidden;
 }
 
@@ -25,8 +37,8 @@
 }
 
 .score {
-    height: 4rem;
-    font-size: 4rem;
+    height: min(8vw, 8vh, 4rem);
+    font-size: min(8vw, 8vh, 4rem);
     font-weight: 600;
     display: flex;
     align-items: center;
@@ -34,7 +46,7 @@
 }
 
 .result {
-    font-size: 1.5rem;
+    font-size: min(3vw, 3vh, 1.5rem);
     font-weight: 200;
 }
 
